--- a/assets/frontend.css
+++ b/assets/frontend.css
@@ -6,13 +6,18 @@
 .navbar .navbar-brand {
     font-weight: 800;
     text-transform: uppercase;
-    font-size: 1.5em;
+    font-size: 2em;
     color: #EB984E;
     margin-left: 50px;
 }
 
 .navbar-light .navbar-nav .nav-link {
-    color: #f7f4f2;
+    font-weight: 800;
+    font-size: 1em;
+    color: #FDEBD0;
+    padding: 10px 25px;
+    margin-right: 50px;
+    text-transform: uppercase;
 }
 
 /* jumbotron */
