--- a/assets/frontend.css
+++ b/assets/frontend.css
@@ -51,6 +51,21 @@
 .carousel {
     width: 15rem;
 }
+
+/* isi konten */
+.komentar {
+    background-color: #f0e68c;
+    height: 550px;
+    margin-top: 30px;
+}
+
+.komentar h1 {
+    padding: 30px 0;
+    font-weight: 400;
+    font-size: 28px;
+    text-align: center;
+    color: #10504d;
+}
 /* @media (min-width: 992px) {
     
     .navbar {
