--- a/assets/frontend.css
+++ b/assets/frontend.css
@@ -53,6 +53,29 @@
 }
 
 /* isi konten */
+.isi-content {
+    margin-top: 30px;
+}
+
+.isi-content h1 {
+    font-weight: 400;
+    font-size: 30px;
+    text-transform: capitalize;
+    text-align: center;
+    color: #eb984e;
+}
+
+.isi-content b {
+    color: #1a1918;
+}
+
+.isi-content hr {
+    border-color: #1a1918;
+    width: 15%;
+    border-width: 3px;
+    margin-top: -2px;
+}
+
 .komentar {
     background-color: #f0e68c;
     height: 550px;
@@ -65,70 +88,12 @@
     font-size: 28px;
     text-align: center;
     color: #10504d;
+    text-transform: capitalize;
 }
-/* @media (min-width: 992px) {
-    
-    .navbar {
-        padding: 10px 0;
-        background-color: transparent;
-    }
 
-    .navbar .navbar-brand {
-        font-weight: 800;
-        text-transform: uppercase;
-        font-size: 1.5em;
-        color: green;
-        margin-left: 50px;
-    }
-
-    .navbar .nav-item {
-        font-weight: 800;
-        text-transform: uppercase;
-        margin-right: 50px;
-        text-shadow: 1px 1px 1px rgb(0, 0, 0, 0.7);
-    }
-
-    .navbar-light .navbar-nav .nav-link {
-        color: blue;
-        padding: 10px 25px;
-    }
-
-    .nav-link:hover::after {
-        content: '';
-        display: block;
-        border-bottom: 3px solid #D35400;
-        width: 50%;
-        margin: auto;
-        margin-top: -13px;
-    }
-
-    .jumbotron{
-        background-size: cover;
-        height: 950px;
-        margin-top: -225px;
-    }
-
-    .jumbotron .display-4 {
-        font-size: 50px;
-    }
-
-    .jumbotron h2 {
-        font-weight: 300;
-        font-size: 40px;
-        text-transform: capitalize;
-        color: white;
-    }
-
-    .jumbotron h4 {
-        font-weight: 300;
-        font-size: 15px;
-    }
-
-    .jumbotron .jb {
-        margin-top: 300px;
-    }
-
-    .carousel{
-        width: 18rem;
-    }
-} */
+.komentar hr {
+    border-color: #1a1918;
+    width: 70px;
+    border-width: 3px;
+    margin-top: -30px;
+}
