--- a/assets/frontend.css
+++ b/assets/frontend.css
@@ -76,6 +76,20 @@
     margin-top: -2px;
 }
 
+.inner {
+    width: 350px;
+	height: 200px;
+	overflow: hidden;
+}
+
+.inner img {
+	transition: all 1.5s ease;
+}
+
+.inner:hover img {
+	transform: scale(1.5);
+}
+
 .komentar {
     background-color: #f0e68c;
     height: 550px;
