--- a/assets/frontend.css
+++ b/assets/frontend.css
@@ -49,7 +49,8 @@
 }
 
 .carousel {
-    width: 15rem;
+    width: 100%;
+    padding-top: 50px;
 }
 
 /* isi konten */
@@ -77,9 +78,7 @@
 }
 
 .inner {
-    width: 350px;
-	height: 200px;
-	overflow: hidden;
+    overflow: hidden;
 }
 
 .inner img {
@@ -110,4 +109,118 @@
     width: 70px;
     border-width: 3px;
     margin-top: -30px;
+}
+
+form label b {
+	color: #10504d;
+}
+
+.footer {
+	background-size: cover;
+	height: 80px;
+	background-color: #008B8B;
+}
+
+.footer h4 {
+	padding: 27px 0;
+	font-weight: 300;
+	font-size: 15px;
+	color: white
+}
+
+
+/* versi dekstop */
+@media (min-width: 992px) {
+	.navbar {
+		padding: 10px 0;
+		background-color: transparent;
+	}
+
+	.navbar .navbar-brand {
+		font-weight: 800;
+		text-transform: uppercase;
+		font-size: 2em;
+		color: #EB984E;
+		margin-left: 50px;
+	}
+
+	.navbar .nav-item {
+		font-weight: 800;
+		text-transform: uppercase;
+		margin-right: 50px;
+		text-shadow: 1px 1px 1px rgb(0, 0, 0, 0.7);
+	}
+
+	.navbar-light .navbar-nav .nav-link {
+		color: #FDEBD0;
+		padding: 10px 25px;
+	}
+
+	.nav-link:hover::after {
+		content: '';
+		display: block;
+		border-bottom: 3px solid #D35400;
+		width: 50%;
+		margin: auto;
+		margin-bottom: -13px;
+	}
+
+	.jumbotron {
+
+		background-size: cover;
+		height: 950px;
+		margin-top: -225px;
+
+	}
+
+	.jumbotron .display-4 {
+		font-size: 50px;
+	}
+
+	.jumbotron h2 {
+		font-weight: 300;
+		font-size: 40px;
+		text-transform: capitalize;
+		color: white;
+	}
+
+	.jumbotron h4 {
+		font-weight: 300;
+		font-size: 15px;
+	}
+
+	.jumbotron .jb {
+		margin-top: 300px;
+	}
+
+	.carousel {
+		width: 18rem;
+	}
+
+	/* isi content */
+
+	.isi-content h1 {
+		font-size: 40px;
+	}
+
+	.isi-content .row {
+		margin-top: 25px;
+	}
+
+	.inner {
+		width: 350px;
+		height: 200px;
+	}
+
+	/* form */
+
+	.komentar {
+		height: 570px;
+	}
+
+	.komentar h1 {
+		font-size: 35px;
+		font-weight: 400;
+	}
+
 }
